--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2359,6 +2359,28 @@ dl.portlet div.listingBar a:link {
 	padding-top: 1em;
 }
 
+#footer .footer-logos {
+    max-width: 100%;
+    margin: 0 0 -20px;
+    padding: 2em 0;
+    background: #0042b1;
+}
+.footer-logos>div {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+#footer .footer-logos {
+    max-width: 100%;
+    margin: 0 0 -20px;
+    padding: 2em 0;
+    background: #00420c;
+}
+.footer-logos>div {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
 #footer .logo-brasil img {
 	float: right;
 }
