Correção na cor de fundo do assunto

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -874,7 +874,7 @@ dl.portlet dt a:visited {
 .portlet-static-centrais-de-conteudos .portletHeader,
 .portletNavigationTree .portletHeader {
 	border-top: 4px solid #00510f;
-	background: #eeefff;
+	background: #edeff1;
 	border-bottom: none;
 	color: #00510f;
 	padding: 8px 8px 24px 10px;
