--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -882,6 +882,10 @@ dl.portlet dt a:visited {
 	margin: 0;
 }
 
+.portletNavigationTree>.portletItem>.navTree>.navTreeItem>a>span {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
 .portletNavigationTree .portletHeader a {
 	color: #00510f !important;
 }
