Alterado cor da barra #sobre, arte enviou cor errada

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -330,7 +330,7 @@ div.width-5 {
 	clear: both;
 	max-width: 100% !important;
 	margin: 0;
-	background: #00510f;
+	background: #00420c;
 	padding: 5px 0;
 }
 
