alterações de altura mínima, borda, fonte na capa

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -95,7 +95,7 @@ p {
 #main {
 	background: #fff;
 	font-size: 1.3em;
-	padding: 1em 0;
+	padding: 4.1em 0 1.5em;
 	max-width: 960px;
 	margin: 0 auto;
 }
@@ -1258,6 +1258,10 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	margin-bottom: 10px;
 }
 
+.tile.fio-separador {
+	margin-bottom: 2em;
+}
+
 .tile-subtitle {
 	color: #2C67CD;
 	font-weight: normal;
@@ -1431,7 +1435,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .lista-vertical .collection-item h2,
 .lista-vertical .collection-item h3 {
 	font-size: 1em;
-	margin: 0.8em 0 !important;
+	margin: 1.2em 0 !important;
 	padding: 0;
 	line-height: 1em;
 }
@@ -1527,7 +1531,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 .tile p {
-	line-height: 1.4em;
+	line-height: 1.75em;
 }
 
 .left {
@@ -1592,11 +1596,13 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 .outtanding-header {
 	margin-bottom: 5px;
-	border-top: 1px solid #172838;
 	position: relative;
-	background-color: red;
+	border-top: 4px solid #172838;
 }
 
+.outstanding-header {
+	font-family:  'Open Sans';
+}
 
 .outstanding-header .outstanding-title {
 	color: #2C67CD;
@@ -1605,8 +1611,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	padding: 7px 0;
 	margin-left: 0 !important;
 	padding-left: 0.3em;
-	border-top: 4px solid #172838;
 	border-bottom: 1px solid #CCCCCC;
+	border-top: 2px solid #172838;
 }
 
 .outstanding-header h1 {
@@ -1617,20 +1623,17 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 .outstanding-header h2 {
 	font-size: 2em !important;
-	text-transform: uppercase;
-	font-weight: bold !important;
+	min-height: 48px;
 }
 
 .outstanding-header h3 {
 	font-size: 1.5em !important;
-	text-transform: uppercase;
-	font-weight: bold !important;
+	min-height: 48px;
 }
 
 .outstanding-header h4 {
 	font-size: 1.3em !important;
-	text-transform: uppercase;
-	font-weight: bold !important;
+	min-height: 48px;
 }
 
 .outstanding-header .outstanding-link {
@@ -1654,6 +1657,9 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 /*
  * Paleta de cores - cor / editoria
  */
+.padrao .outstanding-header {
+	border-top: 2px solid #172838;
+}
 
 /* laranja / cidadania e justiça */
 .laranja .tile-title {
@@ -1661,7 +1667,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #ba4a00;
 } .laranja .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #ba4a00;
+	border-top: 2px solid #ba4a00;
 	min-height: 40px;
 } .laranja .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1678,7 +1684,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #3b7390;
 } .azul-petroleo .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #3b7390;
+	border-top: 2px solid #3b7390;
 	min-height: 40px;
 } .azul-petroleo .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1695,7 +1701,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #b97a00;
 } .dourado .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #b97a00;
+	border-top: 2px solid #b97a00;
 	min-height: 40px;
 } .dourado .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1712,7 +1718,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #643c67;
 } .roxo .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #643c67;
+	border-top: 2px solid #643c67;
 	min-height: 40px;
 } .roxo .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1729,7 +1735,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #826938;
 } .marrom-claro .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #826938;
+	border-top: 2px solid #826938;
 	min-height: 40px;
 } .marrom-claro .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1746,7 +1752,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #1d571f;
 } .verde-escuro .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #1d571f;
+	border-top: 2px solid #1d571f;
 	min-height: 40px;
 } .verde-escuro .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1763,7 +1769,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #017B16;
 } .verde .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #017b16;
+	border-top: 2px solid #017b16;
 	min-height: 40px;
 } .verde .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1780,7 +1786,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #1a55dd;
 } .azul .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #1a55dd;
+	border-top: 2px solid #1a55dd;
 	min-height: 40px;
 } .azul .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1797,7 +1803,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #753900;
 } .marrom .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #753900;
+	border-top: 2px solid #753900;
 	min-height: 40px;
 } .marrom .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1814,7 +1820,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #56762b;
 } .verde-claro .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #56762b;
+	border-top: 2px solid #56762b;
 	min-height: 40px;
 } .verde-claro .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1831,7 +1837,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #3867b7;
 } .azul-claro .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #3867b7;
+	border-top: 2px solid #3867b7;
 	min-height: 40px;
 } .azul-claro .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1848,7 +1854,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #00439e;
 } .azul-escuro .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #00439e;
+	border-top: 2px solid #00439e;
 	min-height: 40px;
 } .azul-escuro .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1865,7 +1871,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #00A0DB;
 } .azul-piscina .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #00A0DB;
+	border-top: 2px solid #00A0DB;
 	min-height: 40px;
 } .azul-piscina .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1880,7 +1886,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #AD6500;
 } .bege .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #AD6500;
+	border-top: 2px solid #AD6500;
 	min-height: 40px;
 } .bege .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1897,7 +1903,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #DE9200;
 } .amarelo .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #DE9200;
+	border-top: 2px solid #DE9200;
 	min-height: 40px;
 } .amarelo .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -1912,7 +1918,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	color: #AD6500;
 } .bege .outstanding-header {
 	background: #eeeff1;
-	border-top: 4px solid #AD6500;
+	border-top: 2px solid #AD6500;
 	min-height: 40px;
 } .bege .outstanding-header .outstanding-title {
 	background: #eeeff1;
@@ -2298,6 +2304,7 @@ dl.portlet div.listingBar a:link {
 /****************** FOOTER ******************/
 
 #voltar-topo {
+	margin-top: 44px;
 	text-align: right;
 }
 
