--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -884,6 +884,8 @@ dl.portlet dt a:visited {
 
 .portletNavigationTree>.portletItem>.navTree>.navTreeItem>a>span {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    color: #172938 !important;
 }
 
 .portletNavigationTree .portletHeader a {
