Alteração da font de titulo do bloco de serviços

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1291,6 +1291,10 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	font-weight: normal;
 }
 
+.link-externo .tile-header {
+	text-transform: uppercase;
+}
+
 .tile-header span {
 	font-size: 1.4em;
 }
