--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1257,7 +1257,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 } #content .cover-collection-tile h2 a { color: #172938; }
 
 .tile h3 {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.3em;
 	font-weight: bold;
 	line-height: 1.2em;
@@ -1618,7 +1618,10 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 /*Tile Header*/
 
-.outstanding-header {
+#content .outstanding-header h1,
+#content .outstanding-header h2,
+#content .outstanding-header h3,
+#content .outstanding-header h4 {
 	font-family:  'Open Sans', Arial, Helvetica, sans-serif;
 }
 
