Distancia entre os itens do footer diminuido para 14px

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2369,7 +2369,7 @@ dl.portlet div.listingBar a:link {
 }
 
 #doormat-container dd {
-	padding: .5em 1.2em .3em 1.2em;
+	padding: .5em 1.2em 0 1.2em;
 	font-family: 'Open Sans';
 }
 
