remoção das margins da esquerda e direita do siteactions

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -314,6 +314,14 @@ div.width-5 {
 	text-transform: uppercase;
 }
 
+#siteaction-accessibility a {
+	padding-left: 0;
+}
+
+#portal-siteactions .last-item {
+	margin-right: 0;
+}
+
 #portal-siteactions a:hover {
 	color: #fff !important;
 }
