Inserção manual de font-face da família Open Sans

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -4,6 +4,61 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600);
 
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('../fonts/opensans-300-webfont.eot');
+    src: url('../fonts/opensans-300-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-300-webfont.woff') format('woff'),
+         url('../fonts/opensans-300-webfont.ttf') format('truetype'),
+         url('../fonts/opensans-300-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('../fonts/opensans-400-webfont.eot');
+    src: url('../fonts/opensans-400-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-400-webfont.woff') format('woff'),
+         url('../fonts/opensans-400-webfont.ttf') format('truetype'),
+         url('../fonts/opensans-400-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'open_sanssemibold';
+    src: url('../fonts/opensans-600-webfont.eot');
+    src: url('../fonts/opensans-600-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-600-webfont.woff') format('woff'),
+         url('../fonts/opensans-600-webfont.ttf') format('truetype'),
+         url('../fonts/opensans-600-webfont.svg#open_sanssemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'open_sansbold';
+    src: url('../fonts/opensans-700-webfont.eot');
+    src: url('../fonts/opensans-700-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-700-webfont.woff') format('woff'),
+         url('../fonts/opensans-700-webfont.ttf') format('truetype'),
+         url('../fonts/opensans-700-webfont.svg#open_sansbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'open_sansextrabold';
+    src: url('opensans-800-webfont.eot');
+    src: url('opensans-800-webfont.eot?#iefix') format('embedded-opentype'),
+         url('opensans-800-webfont.woff') format('woff'),
+         url('opensans-800-webfont.ttf') format('truetype'),
+         url('opensans-800-webfont.svg#open_sansextrabold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* reset */
 * {
 	margin: 0;
@@ -18,13 +73,15 @@
 body {
 	background-color: #fff;
 	color: #000000;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular';
 	font-size: 62.5%;
  /* with this 1em = 10px */;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sanssemibold';
 }
 
 #content h1 {
@@ -225,7 +282,8 @@ div.width-5 {
 #logo #portal-title {
 	margin: 0;
 	color: #fff;
-	font-weight: 800;
+	/*font-weight: 800;*/
+	font-family: 'open_sansbold';
 	font-size: 4em;
 }
 
@@ -382,7 +440,8 @@ input.searchField {
 
 #portal-searchbox .searchField {
 	font-size: 1.2em;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular', Arial, sans-serif;
 	padding: 0.35em;
 	border-right: none;
 	border: none;
@@ -882,11 +941,15 @@ dl.portlet dt a:visited {
 	padding: 8px 8px 24px 10px;
 	text-transform: uppercase;
 	margin: 0;
+	/* reseta font-weight:bold do public.css */
+	font-weight: normal;
+	font-family: 'open_sansbold';
 }
 
 .portletNavigationTree > .portletItem > .navTree > .navTreeItem > a > span,
 .portletStaticText > .portletItem > .list-central > .item-central > a {
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    /*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+    font-family: 'open_sansregular';
     font-size: 14px;
     color: #172938 !important;
 }
@@ -1245,7 +1308,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 .tile h2 {
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular';
 	font-size: 14px;
 	line-height: 1.2em;
 	margin: 0;
@@ -1253,8 +1317,10 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 #content .cover-collection-tile h2 {
-	font-weight: 600; /* semibold */
-} #content .cover-collection-tile h2 a { color: #172938; }
+	/*font-weight: 600;*/
+	font-family: 'open_sanssemibold';
+}
+#content .cover-collection-tile h2 a { color: #172938; }
 
 .tile h3 {
 	font-family: Arial, Helvetica, sans-serif;
@@ -1435,7 +1501,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .lista-vertical .tile-footer a,
 .lista-vertical .collection-footer a {
 	font-size: 11px;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular', Arial, sans-serif;
 }
 
 .lista-vertical .list-item a,
@@ -1622,7 +1689,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 #content .outstanding-header h2,
 #content .outstanding-header h3,
 #content .outstanding-header h4 {
-	font-family:  'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family:  'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular', Arial, sans-serif;
 }
 
 .outstanding-header .outstanding-title {
@@ -1665,7 +1733,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 	background: url("../img/readmoredarkblue.png") no-repeat scroll right 5px transparent;
 	display: block;
 	font-size: 10px;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular', Arial, sans-serif;
 	line-height: 2.8em;
 	margin-right: 10px;
 	margin-top: 5px;
@@ -2717,7 +2786,8 @@ ul.social-tabs.css-tabs>li>a {
 		margin: 0;
 		border: 0 none;
 		font-size: 18px;
-		font-family:  'Open Sans', Arial, Helvetica, sans-serif;
+		/*font-family:  'Open Sans', Arial, Helvetica, sans-serif;*/
+		font-family: 'open_sansregular', Arial, sans-serif;
 		color: #064d13;
 		background-color: #fff;
 		border-top: 2px solid #ccc;
@@ -2837,7 +2907,8 @@ ul.formTabs {
 /* formulário de contato */
 .field input[type="text"],
 #content .field textarea {
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+	/*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
+	font-family: 'open_sansregular';
 	background-color: #fff;
 	border : 1px solid #000;
 	text-indent: 2px;
@@ -2891,8 +2962,9 @@ ul.formTabs {
 /* título da sessão */
 body[class*="nitf"] #content p.section {
     font-size: 16px;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    font-weight: 600;
+    /*font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-weight: 600;*/
+    font-family: 'open_sanssemibold', Arial, sans-serif;
     margin-bottom: 20px !important;
     text-transform: uppercase;
     letter-spacing: normal;
