correção no ajuste de espaçamento inferior do primeiro portlet de navegação

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -752,7 +752,7 @@ dl.portlet dt.hiddenStructure {
 	border: none;
 }
 
-#portal-column-one .first-item .portletNavigationTree {
+#portal-column-one .portletNavigationTree:first-child {
 	margin-bottom: 3.61em;
 }
 
