--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -896,7 +896,10 @@ dl.portlet dt a:visited {
 .portletStaticText > .portletItem > .list-central > .item-central > a {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 1.15em;
-    color: #172938 !important;
+}
+
+.portletNavigationTree > .portletItem a span {
+	color: #172938 !important;
 }
 
 .portletNavigationTree .portletHeader a {
@@ -1040,8 +1043,8 @@ dl.portlet ul.navTreeLevel6 li a {
 	padding: 0.55em 4.5em !important;
 }
 
-#portal-column-one > .portletWrapper dl.portlet.first-item-nav ul.navTree li a,
-#portal-column-one > .portletWrapper dl.portlet.first-item-nav ul.navTree li a span {
+#portal-column-one > .portletWrapper dl.portlet.first-item-nav a,
+#portal-column-one > .portletWrapper dl.portlet.first-item-nav a span {
 	padding: 0.475em 0 !important;
 	color: #2c67cd !important;
 	font-size: 110%;
