Correção para ocultar portlets estaticos do menu lateral

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2595,6 +2595,7 @@ ul.social-tabs.css-tabs>li>a {
 		margin-bottom: 0;
 	}
 
+	#portal-column-one .portletStaticText,
 	#portal-column-one dl.portlet dd {
 		display: none;
 	}
