Adicionada configuração para 2 colunas

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -155,12 +155,20 @@ div.width-2.position-10 {
     margin-left: -13.061%;
 }
 
+div.width-8.position-8 {
+    margin-left: -47.022%;
+}
+
 div.width-2 {
 	width: 13.061%;
 }
 
 div.width-5 {
 	width: 30.042%;
+}
+
+div.width-8 {
+	width: 47.022%;
 }
 
 div.width-10 {
